# ml_feature_pipeline

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dbt.txt  requirements_main.txt
dbt_project/: dbt_project.yml
dbt_project/macros/: circular_mean.sql  elevation_penalty.sql  floor_hour.sql  haversine_distance.sql  is_final_subhourly_record.sql  normalize_weights.sql  safe_divide.sql
notebooks/: inspect_dbt_staging.ipynb  inspect_lcdv2_atmospheric_data.ipynb  inspect_lcdv2_atmospheric_hourly_rollup.ipynb  inspect_lcdv2_stations.ipynb  inspect_lcdv2_stations_duckdb.ipynb  inspect_normalization.ipynb
src/comfort_index_pipeline/config/: settings.py
src/comfort_index_pipeline/ingestion/: acs_5yr.py  elevation.py  tiger_geospatial_tracts.py
src/comfort_index_pipeline/metadata_reference/: acs5_variables.py  lcdv2_variables.py
src/comfort_index_pipeline/normalization/: raw_to_norm_acs_5yr.py  raw_to_norm_lcdv2_hourly.py  raw_to_norm_tiger_tracts.py
src/comfort_index_pipeline/state/: ingestion_state.json.example  ingestion_state.py  normalization_state.py  state.json.example  state.py
src/ml_feature_pipeline/config/: settings.py
src/ml_feature_pipeline/ingestion/: acs_5yr.py  elevation.py  tiger_geospatial_tracts.py
tests/ingestion/: test_acs_5yr.py  test_daily_prior_years.py  test_elevation.py  test_hourly_prior_years.py  test_lcdv2_stations.py  test_tiger_geospatial_tracts.py
tests/normalization/: test_raw_to_norm_acs_5yr.py  test_raw_to_norm_lcdv2_hourly.py  test_raw_to_norm_tiger_tracks.py
(+21 files in other folders)
